Migrate yang-model-ri to JUnit 5
This is a straightforward migration.

Change-Id: I7957e83e2bd47da07194dc207aa2fd221d8acedc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>